# src/swagger.yaml
@@ -221,6 +221,36 @@ paths:
         400:
           description: "Invalid status value"
   /api/balances:
+    post:
+      tags:
+        - "balances"
+      symmary: ""
+      descrpition: ""
+      operationId: "createBalance"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: hookah-jwt
+          in: header
+          description: an authorization header
+          type: string
+        - in: "body"
+          name: "body"
+          description: "The balance that needs to create"
+          required: true
+          type: "string"
+          schema:
+            $ref: "#/definitions/BalanceCreate"
+      responses:
+        200:
+          schema:
+            type: "object"
+            items:
+              $ref: "#/definitions/BalanceCreate"
+        400:
+          description: "Invalid status value"
     get:
       tags:
       - "balances"
@@ -414,6 +444,8 @@ definitions:
       email:
         type: "string"
         description: "TBD"
+      name:
+        type: "string"
       password:
         type: "string"
   UserRegister:
@@ -422,5 +454,17 @@ definitions:
       email:
         type: "string"
         description: "TBD"
+      name:
+        type: "string"
       password:
+        type: "string"
+  BalanceCreate:
+    type: "object"
+    properties:
+      userId:
+        type: "string"
+        description: "TBD"
+      amount:
+        type: "number"
+      message:
         type: "string"
